fix: dropdown toggle on not visible in viewport

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -76,14 +76,6 @@ nav.app_nav {
   .mobile_menu {
     display: flex;
   }
-  .navbar_userdropdown {
-    display: none;
-    gap: 0.5rem;
-    align-items: center;
-    img {
-      border-radius: $border-radius-full;
-    }
-  }
 }
 .overlay__backdrop {
   .close {
@@ -117,15 +109,6 @@ nav.app_nav {
     line-height: 19px;
     border: 1px solid rgba($color: $text, $alpha: 0.2);
     border-radius: $border-radius;
-  }
-  .navbar_userdropdown {
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-    font-size: 16px;
-    img {
-      border-radius: $border-radius-full;
-    }
   }
 }
 .overlay__backdrop_slide_in {
@@ -203,9 +186,6 @@ nav {
     .leftside__nav {
       & > a {
         display: block;
-      }
-      .navbar_userdropdown {
-        display: flex;
       }
     }
     .mobile_menu {
